--- a/intro.html
+++ b/intro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,35 @@
             <button class="btndisp1try"><a href= "./login.html" style="color:black">Login</a></button>
             <button class="btndisp2try"><a href="./signup.html" style="color:black">Sign up</a></button>
         </div>
-        <!-- <button class="butt1">Contact Us</button> -->
+        <button class="butt1">Contact Us</button>
     </div>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/intro-final.css">
+    <title>PlateIntel</title>
+</head>
+<body>
+    <img src="./images/intro-vector.png" class="fixed-vector" >
+    <nav>
+    <div class="button-flex">
+            <div class="nav-item ">
+                <button class="btndisp1"><a class="nav-link" href= "./login.html" style="color:black">Login</a></button>
+            </div>
+            <div class="nav-item ">
+                <button class="btndisp2"><a class="nav-link" href="./signup.html" style="color:black">Sign up</a></button>
+            </div>
+    </div>
+    </nav>
+
+
+
 </body>
 </html>
