--- a/introtrial2.html
+++ b/introtrial2.html
@@ -14,7 +14,7 @@
                 <h3>PlateIntel</h3>
             </nav>
             <div class="div-left-body">
-                <img src=src="../images/intro-vector.png" class="img-intro-vector"/>
+                <img src="../images/intro-vector.png" class="img-intro-vector"/>
             </div>
         </div>
         <div class="div-right">
