--- a/landing.html
+++ b/landing.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +12,7 @@
 <body>
     <nav>
         <div class="topnav">
-            <!-- <a class="a-active" href="#home">Home</a>
-            <a class="a-contact" href="#contact">Contact</a>
-            <a class="a-about" href="#about">About</a> -->
-            <button class="button-signout"><a href="./try.html">Sign Out</a></button>
+            <button class="button-signout"><a href="./intro.html">Sign Out</a></button>
         </div>
         
     </nav>
@@ -21,7 +20,7 @@
     <div class="div-landing-butts">
         <p class="mini-text">Welcome back,</p>
         <h3 class="mega-text">ABC Security Solutions</h3>
-        <button class="butt-security">View Security Logs</button>
+        <button class="butt-security"><a href="./logs.html">View Security Logs</a></button>
         <button class="butt-employees">Employees</button>
         <button class="butt-locations">Overlooking Locations</button>
     </div>
