--- a/intro.html
+++ b/intro.html
@@ -1,33 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/intro-trial.css">
-    <title>IntroTrial</title>
-</head>
-<body>
-    <div>
-        <div class="div-vector">
-            <img src="../images/intro-vector.png" class="img-intro-vector"/>
-        </div>
-
-        <div class="div-intro-text">
-            <h3 class="mega-text1">Safety And Ease Start here</h3>
-            <h4 class="mega-text2">Never been here before?</h4>
-        </div>
-        
-        <div class="button-flex">
-            <button class="btndisp1try"><a href= "./login.html" style="color:black">Login</a></button>
-            <button class="btndisp2try"><a href="./signup.html" style="color:black">Sign up</a></button>
-        </div>
-        <button class="butt1">Contact Us</button>
-    </div>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,14 +8,22 @@
     <title>PlateIntel</title>
 </head>
 <body>
-    <img src="./images/intro-vector.png" class="fixed-vector" >
+    <div class="nav-item ">
+        <button class="btndisp1" style="border: 1px solid white;">
+            <a class="nav-link" href= "./login.html" style="color:white; ">
+                Login
+            </a>
+        </button>
+    </div>
+    <img src="./images/intro-trial.png" class="fixed-vector" >
     <nav>
     <div class="button-flex">
             <div class="nav-item ">
-                <button class="btndisp1"><a class="nav-link" href= "./login.html" style="color:black">Login</a></button>
-            </div>
-            <div class="nav-item ">
-                <button class="btndisp2"><a class="nav-link" href="./signup.html" style="color:black">Sign up</a></button>
+                <button class="btndisp2">
+                    <a class="nav-link" href="./signup.html" style="color:#3547A3">
+                        Sign up
+                    </a>
+                </button>
             </div>
     </div>
     </nav>
