--- a/logs.html
+++ b/logs.html
@@ -18,7 +18,7 @@
     <h2 class="seclog-1">Security Logs for:<br></h2>
     <h2 class="header">ABC Security Solutions</h2>
 
-    <table>
+    <table class="style-table">
         <tr>
 
             <th>Car ID</th>
