--- a/logs.html
+++ b/logs.html
@@ -16,7 +16,7 @@
     </nav>
     <!-- <h4 class="btn-signout">Sign Out </h4> -->
     <h2 class="seclog-1">Security Logs for:<br></h2>
-    <h2 class="header">ABC Security Solutions</h2>
+    <h3 class="header">ABC Security Solutions</h3><br>
 
     <table class="style-table">
         <tr>
