--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,9 @@
                 <input type="text" class="designation" name="designation" placeholder="Designation"><br>
                 <input type="text" class="email" name="email" placeholder="Email"><br>
                 <input type="text" class="number" name="number" placeholder="Username"><br>
-                <input type="text" class="location" name="location" placeholder="Password"><br>
+                <input type="text" class="location" name="location" placeholder="Location"><br>
+                
+                <input type="text" class="password" name="password" placeholder="Password"><br>
                 <input type="text" class="cpassword" name="cpassword" placeholder="Confirm Password"><br>
                 <button class="button-submit"><a href="./landing.html">Submit</a></button> 
             </div>
